final media changes

--- a/index.html
+++ b/index.html
@@ -41,18 +41,16 @@ ul li {
 }
 
 ul li a {
-border: black solid 1px;
-box-shadow: 15px 8px; 16px 15px black;
-margin-right: 5px;
-text-decoration: none;
-width: 120px;
-height: 50px;
-line-height: 50px;
-display: inline-block;
-color: rebeccapurple;
-text-align: center;
-
-}
+    border: black solid 1px;
+    box-shadow: 15px 8px 16px 15px black;
+    margin-right: 5px;
+    text-decoration: none;
+    /*  width: 120px; */
+    height: 50px;
+    line-height: 50px;
+    color: skyblue;
+    text-align: center;
+    }
 
 ul li a:hover {
 background-color: silver;
